--- a/app/src/main/res/layout/activity_pager_intervencije_net_fullscreen.xml
+++ b/app/src/main/res/layout/activity_pager_intervencije_net_fullscreen.xml
@@ -4,101 +4,106 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1F1F1"
-    android:backgroundTint="#F1F1F1"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
+    android:outlineProvider="bounds"
     tools:context="com.example.firesms.PagerIntervencijeNetFullscreenActivity">
 
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="40dp" />
 
     <TextView
         android:id="@+id/smsPagerFullPagerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:hint="PAGER_NAME"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColorHint="#000000"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/guideline29"
-        app:layout_constraintTop_toTopOf="@+id/guideline26" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.307"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.051" />
+
 
     <TextView
         android:id="@+id/smsPagerFullscreenDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
         android:hint="DATE AND TIME"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColorHint="#000000"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/guideline29"
-        app:layout_constraintTop_toTopOf="@+id/guideline26" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.325"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.113" />
 
     <TextView
         android:id="@+id/smsPagerFullscreenPhoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
         android:hint="PHONE_NUMBER"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColorHint="#000000"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/guideline29"
-        app:layout_constraintTop_toTopOf="@+id/guideline26" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.337"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.082" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="65dp"
         android:layout_height="65dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
         android:background="#00FFFFFF"
-        app:layout_constraintEnd_toStartOf="@+id/guideline29"
-        app:layout_constraintStart_toStartOf="@+id/guideline25"
-        app:layout_constraintTop_toTopOf="@+id/guideline26"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.053"
         app:srcCompat="@drawable/ic_notifications_none_black_24dp" />
 
     <TextView
         android:id="@+id/smsMessageFullscreen"
         android:layout_width="366dp"
         android:layout_height="240dp"
-        android:layout_marginTop="20dp"
         android:background="#959595"
         android:hint="SMS_MESSAGE"
         android:textColorHint="#000000"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline40"
-        app:layout_constraintStart_toStartOf="@+id/guideline25"
-        app:layout_constraintTop_toTopOf="@+id/guideline37" />
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.296" />
 
     <Button
         android:id="@+id/notComingBtn"
         android:layout_width="101dp"
         android:layout_height="101dp"
-        android:layout_marginTop="40dp"
         android:background="@drawable/not_coming_custom_button"
         android:onClick="Not_coming_call"
         android:text="NE"
         android:textColor="#96191D"
         android:textSize="36sp"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/guideline25"
-        app:layout_constraintTop_toTopOf="@+id/guideline38" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.699" />
 
     <Button
         android:id="@+id/comingLaterBtn"
         android:layout_width="101dp"
         android:layout_height="101dp"
-        android:layout_marginTop="40dp"
         android:background="@drawable/coming_later_custom_button"
         android:onClick="Coming_later_call"
         android:text="DaK"
@@ -106,31 +111,33 @@
         android:textColor="#F6921E"
         android:textSize="36sp"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/guideline40"
-        app:layout_constraintTop_toTopOf="@+id/guideline38" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.896"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.696" />
 
     <Button
         android:id="@+id/comingBtn"
         android:layout_width="101dp"
         android:layout_height="101dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="33dp"
         android:background="@drawable/coming_custom_button"
         android:onClick="Coming_call"
         android:text="DA"
         android:textColor="#016837"
         android:textSize="36sp"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/comingLaterBtn"
-        app:layout_constraintStart_toEndOf="@+id/notComingBtn"
-        app:layout_constraintTop_toTopOf="@+id/guideline38" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.697" />
 
     <ToggleButton
         android:id="@+id/silenceCloseBtn"
         android:layout_width="347dp"
         android:layout_height="76dp"
-        android:layout_marginTop="48dp"
         android:background="@drawable/silence_close_custom_button"
         android:checked="false"
         android:fontFamily="sans-serif-black"
@@ -140,78 +147,11 @@
         android:textOn="Zaperi poziv"
         android:textSize="36sp"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/guideline40"
-        app:layout_constraintHorizontal_bias="0.523"
-        app:layout_constraintStart_toStartOf="@+id/guideline25"
-        app:layout_constraintTop_toBottomOf="@+id/comingLaterBtn" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline25"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="32dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline29"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="328dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline37"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="140dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline38"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="446dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline40"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="32dp" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="7dp"
-        android:layout_height="801dp"
-        android:background="#96191D"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view3"
-        android:layout_width="7dp"
-        android:layout_height="801dp"
-        android:background="#96191D"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view4"
-        android:layout_width="432dp"
-        android:layout_height="11dp"
-        android:background="#96191D"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="6dp" />
-
-    <View
-        android:id="@+id/view5"
-        android:layout_width="432dp"
-        android:layout_height="12dp"
-        android:background="#96191D"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintVertical_bias="0.9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
